--- a/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/Views/Shared/_Layout.cshtml
+++ b/laboratorium 5/praca domowa/PawełGryglewiczLab5PracDom/PawełGryglewiczLab5PracDom/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link" href=@Url.Action("Index","Home")>Strona główna</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href=@Url.Action("CreatePassenger","Passenger")>Rezerwacja biletu</a>
+                            <a class="nav-link" href=@Url.Action("CreatePassengerForm","Passenger")>Rezerwacja biletu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href=@Url.Action("ListOfPassengers","Passenger")>Lista wszystkich pasażerów</a>
